@@ -34,9 +34,9 @@ dependencies {
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'org.apache.logging.log4j:log4j-core:2.22.0'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.21.0.0'
-    implementation 'org.springframework:spring-jdbc:6.0.14'
+    implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
+    implementation 'com.oracle.database.jdbc:ojdbc10:19.22.0.0'
+    implementation 'org.springframework:spring-jdbc:6.1.4'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
